# svm

./: .gitignore  CMakeLists.txt  README.md  main.c
svm/: svm.c  svm.h  svm_asm.c  svm_asm.h  svm_util.c  svm_util.h
